dealing with missalignment issues when hovering over a tab
When hovering over an active tab the bootstraps border settings would cause the line height to grow by a pixel messing up the layout.

fixed this by making the 0px border below the link !important.

Added 'reloadable' class to tab links to mark links that can be clicked when active

--- a/app/stylesheets/ui/tabs.scss
+++ b/app/stylesheets/ui/tabs.scss
@@ -21,11 +21,20 @@ ul.nav-tabs.flat {
   li {
     a  {
       line-height: 1.75em;
-      border-bottom: 0px;
+      // this would be overriden by hover state bootstrap so !important
+      border-bottom: 0px !important;
       padding: 0px 1em;
       cursor: pointer; // make sure we have a pointer even for ajaxy links
+      &:hover {
+        text-decoration: underline;
+      }
     }
-    a:hover {
+    &.active a:hover {
+      text-decoration: none;
+    }
+    // if you can click on the active tab make it look like a link.
+    &.active a.reloadable:hover {
+      cursor: pointer; // make sure we have a pointer even for ajaxy links
       text-decoration: underline;
     }
   }
